auto zoom on mobile again due to chrome issue

--- a/src/components/TaskForm/TaskForm.css
+++ b/src/components/TaskForm/TaskForm.css
@@ -63,3 +63,9 @@
 .modal-close button:hover {
   color: red;
 }
+
+@media screen and (max-width: 500px) {
+  .modal-close button {
+    font-size: 4vmin;
+  }
+}
